--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "~7.1",
+        "php": ">=7.0.0",
         "deployer/deployer": "~6.0"
     },
     "autoload": {
